...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/filterMood"
        android:layout_width="113dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:text="Mood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/filterReason"
        android:layout_width="116dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:text="Reason"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterMood" />
...
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/filterMood"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/filterWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recent Week"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterReason" />

    <EditText
        android:id="@+id/editReasonFilter"
        android:layout_width="174dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="7dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
...
