...
        android:id="@+id/historyFragment"
        android:enabled="true"
        android:icon="@drawable/outline_access_time_24"
        android:iconTint="@drawable/icon_hover"
        android:title="History"/>
    <item
        android:id="@+id/friendsHistoryFragment"
        android:enabled="true"
        android:icon="@drawable/outline_group_24"
        android:iconTint="@drawable/icon_hover"
        android:title="Following"/>
</menu>
