...
                    android:text="🗺️"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/filterButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F88379"
                    android:paddingVertical="12dp"
                    android:text="Filter"
                    android:textAllCaps="false"
...
